--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ JWT_ACCESS_SECRET=your-super-secret-access-token-key-at-least-32-chars
 JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_SECRET=your-super-secret-refresh-token-key-at-least-32-chars
 JWT_REFRESH_EXPIRES=7d
+
+
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
